consul doesn't recognize jquery added images

--- a/pseudocode.html
+++ b/pseudocode.html
@@ -1,5 +1,5 @@
-1. Assign randomNumber (19-120) to show at the start of the game
-2. Add crystal images
+1. Assign randomNumber (19-120) to show at the start of the game .....-> Not working :(
+2. Add crystal images ... -> check
 3. Make images clickable and pseudo (hover effect)
 4. Assign randomPointNumber to image (points 1-12)
 5. Calculate total points (Sum of randomPointNumber)
