fixed jquery reference added click function to images

--- a/pseudocode.html
+++ b/pseudocode.html
@@ -1,6 +1,10 @@
-1. Assign randomNumber (19-120) to show at the start of the game .....-> Not working :(
+1. Assign randomNumber (19-120) to show at the start of the game .....-> check
+    ***NOTE TO SELF: jquery reference goes in header tags and javascript goes in body tag***
+
 2. Add crystal images ... -> check
-3. Make images clickable and pseudo (hover effect)
+
+3. Make images clickable and pseudo (hover effect) ...-> check **Hover doesn't work**
+
 4. Assign randomPointNumber to image (points 1-12)
 5. Calculate total points (Sum of randomPointNumber)
 6. If (sum of randomPointNumber equals randomNumber){
