random values assigned to respective images when clicked

--- a/pseudocode.html
+++ b/pseudocode.html
@@ -3,19 +3,27 @@
 
 2. Add crystal images ... -> check
 
-3. Make images clickable and pseudo (hover effect) ...-> check **Hover doesn't work**
+3. Make images clickable and pseudo (hover effect) ...-> check 
 
-4. Assign randomPointNumber to image (points 1-12)
-5. Calculate total points (Sum of randomPointNumber)
-6. If (sum of randomPointNumber equals randomNumber){
+4. Assign randomPointNumber to image (points 1-12)...-> check
+
+5. Calculate total points (Sum of randomPointNumber) ...-> check
+    declare variable totalPoints
+
+6. declare variables
+    win
+    lose
+
+7. If (sum of randomPointNumber equals randomNumber){
     player wins ++; (add a point to win)
     restart game'
    }
-7. else{
+8. else{
     player lose ++; (add a point to lose)
     restart game;
    }
-8. Display win points 
-9. Display lose points
+9. Display win points 
+10. Display lose points
 
 Problems:
+image hover not working
