the sum of points being cliked is displayed

--- a/index.html
+++ b/index.html
@@ -21,21 +21,37 @@
 
     <h2>The number to calculate:
         <div id="randomNumber"></div>
-        <h2>
+    <h2>
 
-            <div id="colors">
-                <div class="container">
-                    <img id="blueGreenL" class="color-image" src="assets/images/blueGreenL.png" alt="light blue green color box">
-                    <img id="blueGreen" class="color-image" src="assets/images/blueGreen.png" alt="blue green color box">
-                    <img id="coral" class="color-image" src="assets/images/coral.png" alt="coral color box">
-                    <img id="mustard" class="color-image" src="assets/images/mustard.png" alt="mustard color box">
-                    <div class="middle">
-                        <div class="text">The value of this box is:
-                            <div id="boxValue"></div>
-                        </div>
+        <div id="colors">
+            <div class="container">
+                <img id="blueGreenL" class="color-image" src="assets/images/blueGreenL.png" alt="light blue green color box">
+                <img id="blueGreen" class="color-image" src="assets/images/blueGreen.png" alt="blue green color box">
+                <img id="coral" class="color-image" src="assets/images/coral.png" alt="coral color box">
+                <img id="mustard" class="color-image" src="assets/images/mustard.png" alt="mustard color box">
+                <div class="middle">
+                    <div class="text">The value of this box is:
+                        <div id="boxValue"></div>
                     </div>
                 </div>
             </div>
+        </div>
+
+        <h3>Your value is:
+            <div id="totalValue"></div>
+        </h3>
+
+        <h3>wins:
+            <div id="win"></div>
+        </h3>
+
+        <h3>losses:
+            <div id="lose"></div>
+        </h3>
+            
+
+
+
 
             <!-- javascript reference -->
             <script src="assets\javascript\game.js"></script>
