--- a/pseudocode.html
+++ b/pseudocode.html
@@ -7,7 +7,7 @@
 
 4. Assign randomPointNumber to image (points 1-12)...-> check
 
-5. Calculate total points (Sum of randomPointNumber) ...-> check
+5. Calculate total points ...-> check
     declare variable totalPoints
 
 6. declare variables
