your value, wins, losses display

--- a/pseudocode.html
+++ b/pseudocode.html
@@ -10,20 +10,19 @@
 5. Calculate total points ...-> check
     declare variable totalPoints
 
-6. declare variables
+6. declare variables ...-> check
     win
     lose
 
-7. If (sum of randomPointNumber equals randomNumber){
+7. If (sum of totalPoints equals randomNumber){.....>check
     player wins ++; (add a point to win)
     restart game'
    }
-8. else{
-    player lose ++; (add a point to lose)
-    restart game;
-   }
-9. Display win points 
-10. Display lose points
+8. keep playing unitl totalPoints > randomNumber..... HOW?????
+9. Display win points ...-> check
+10. Display lose points...-> check
 
 Problems:
 image hover not working
+else statement(needs logic)
+restart game
