implemented if else statements to satisfy conditions

--- a/pseudocode.html
+++ b/pseudocode.html
@@ -18,11 +18,14 @@
     player wins ++; (add a point to win)
     restart game'
    }
-8. keep playing unitl totalPoints > randomNumber..... HOW?????
+8. keep playing unitl totalPoints > randomNumber...-> check
+   ***Use if else statement***
+
 9. Display win points ...-> check
+
 10. Display lose points...-> check
 
+11. Restart game  ....????
+
 Problems:
-image hover not working
-else statement(needs logic)
 restart game
