reset is implemented and created function so code is not repeated

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1>Guess The Color's Number</h1>
 
     <h2>The number to calculate:
-        <div id="randomNumber"></div>
+        <div id="InitialRandomNumber"></div>
     <h2>
 
         <div id="colors">
@@ -37,23 +37,23 @@
             </div>
         </div>
 
-        <h3>Your value is:
-            <div id="totalValue"></div>
-        </h3>
+        <div id="values">
 
-        <h3>wins:
-            <div id="win"></div>
-        </h3>
+            <h3>Your value is:
+                <div id="totalValue"></div>
+            </h3>
 
-        <h3>losses:
-            <div id="lose"></div>
-        </h3>
-            
+            <h3>wins:
+                <div id="win"></div>
+            </h3>
 
+            <h3>losses:
+                <div id="lose"></div>
+            </h3>
 
+        </div>  
 
-
-            <!-- javascript reference -->
-            <script src="assets\javascript\game.js"></script>
+<!-- javascript reference -->
+<script src="assets\javascript\game.js"></script>
 
 </body>
