--- a/pseudocode.html
+++ b/pseudocode.html
@@ -1,31 +1,38 @@
-1. Assign randomNumber (19-120) to show at the start of the game .....-> check
+1. Assign randomNumber (19-120) to show at the start of the game .....-> done
     ***NOTE TO SELF: jquery reference goes in header tags and javascript goes in body tag***
 
-2. Add crystal images ... -> check
+2. Add crystal images ... -> done
 
-3. Make images clickable and pseudo (hover effect) ...-> check 
+3. Make images clickable and pseudo (hover effect) ...-> done 
 
-4. Assign randomPointNumber to image (points 1-12)...-> check
+4. Assign randomPointNumber to image (points 1-12)...-> done
 
-5. Calculate total points ...-> check
+5. Calculate total points ...-> done
     declare variable totalPoints
 
-6. declare variables ...-> check
+6. declare variables ...-> done
     win
     lose
 
-7. If (sum of totalPoints equals randomNumber){.....>check
+7. If (sum of totalPoints equals randomNumber){.....>done
     player wins ++; (add a point to win)
     restart game'
    }
-8. keep playing unitl totalPoints > randomNumber...-> check
+8. keep playing unitl totalPoints > randomNumber...-> done
    ***Use if else statement***
 
-9. Display win points ...-> check
+9. Display win points ...-> done
 
-10. Display lose points...-> check
+10. Display lose points...-> done
 
-11. Restart game  ....????
+11. Restart game... -> done
+   reset created random number 
+   reset total value
 
-Problems:
-restart game
+Resolution:
+created a winOrLose function to apply every time any image is clicked:
+   image1
+   image2
+   image3
+   image4
+
